--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
     padding: 10px 15px;
     margin-left: 10px;
     font-size: 16px;
-    background-color: #007bff;
+    background-color: #cc00ff;
     color: white;
     border: none;
     border-radius: 4px;
@@ -50,7 +50,7 @@
   }
   
   button:hover {
-    background-color: #0056b3;
+    background-color: #5a0063;
   }
   
   ul {
